# nbaronariera.github.io

./: .gitignore  404.html  README.md  config.toml  index.html  robots.txt  search_index.es.js  shell.nix  sitemap.xml
.github/workflows/: deploy.yml
blog/: index.html
blog/1/: index.html
blog/page/1/: index.html
blog/presentation/: index.html
categories/: index.html
categories/proyectos/: index.html
categories/proyectos/page/1/: index.html
content/: _index.en.md  _index.md
content/blog/: _index.en.md  presentation.en.md  presentation.md
en/: index.html
en/blog/: index.html
en/blog/1/: index.html
en/blog/page/1/: index.html
en/blog/presentation/: index.html
en/categories/: index.html
en/categories/projects/: index.html
en/categories/projects/page/1/: index.html
en/tags/: index.html
en/tags/games/: index.html
en/tags/games/page/1/: index.html
en/tags/rust/: index.html
en/tags/rust/page/1/: index.html
en/tags/wasm/: index.html
en/tags/wasm/page/1/: index.html
rust/snake/: Cargo.toml
rust/snake/src/: app.rs  controls.rs  lib.rs  snake.rs  state.rs
rust/snake/src/snake/: local_state.rs  mod.rs  structures.rs
rust/template/: Cargo.toml
rust/template/src/: lib.rs
rust/wasm-canvas-lib/: Cargo.toml
rust/wasm-canvas-lib/src/: app.rs  canvas.rs  lib.rs  runner.rs  state.rs
scripts/: README.md  build-css.sh  build-wasm.sh  build.sh  cleanup-test-posts.sh  create-test-post.sh  dev.sh  serve.sh  setup.sh  test-scheduled-posts.sh
static/wasm/placeholder/: package.json  placeholder.d.ts  placeholder_bg.wasm
static/wasm/snake/: package.json  snake.d.ts  snake_bg.wasm  snake_bg.wasm.d.ts
tags/: index.html
tags/juegos/: index.html
tags/juegos/page/1/: index.html
tags/rust/: index.html
tags/rust/page/1/: index.html
tags/wasm/: index.html
tags/wasm/page/1/: index.html
templates/: index.html  layout.html  page.html  section.html
templates/categories/: list.html  single.html
templates/shortcodes/: canvas.html  featured_projects.html
templates/tags/: list.html  single.html
themes/blow/: package-lock.json  tailwind.config.js
themes/blow/src/css/: main.css
themes/blow/static/css/: main.css
themes/blow/templates/: index.html  layout.html  page.html  section.html
themes/blow/templates/categories/: single.html
themes/blow/templates/tags/: single.html
wasm/placeholder/: placeholder.js  placeholder_bg.wasm.d.ts
wasm/snake/: snake.js
