[package]
name = "canvas-snake"
description = "Canvas snake game usando wasm-canvas-lib"
license = "MIT"
version = "1.0.0"
authors = ["luubstar <nbaronariera@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-canvas-lib = { path = "../wasm-canvas-lib" }
getrandom = { version = "0.2", features = ["js"] }
rand = "0.9.0-alpha.2"
